--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Archerbot",
-  "description": "Archerbot is a Slackbot based of FX's Sterling Archer of the TV series Archer™",
-  "repository": "https://github.com/camriera/SlackbotArcher",
+  "name": "Shoresybot",
+  "description": "Shoresybot is a Slackbot based on the character Shoresy of the hit series Letterkenny™",
+  "repository": "https://github.com/camriera/SlackbotShoresy",
   "env": {
     "BOT_API_KEY": {
       "description": "Slack bot RTM API token",
