--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "compromise": "^13.3.1",
+    "natural": "^2.1.5",
     "slackbots": "^1.2.0"
   },
   "devDependencies": {},
